# Against

./: .gitignore  .gitmodules  .gitmodules.swp  Against.sln  CMakeLists.txt  CMakelists.txt  README.md
Against/: Actor.h  Against.vcxproj  Against.vcxproj.filters  Asset.c  Asset.h  Assets.h  CMakeLists.txt  CMakelists.txt  Camera.h  Compute.c  Error.c  Error.h  GUI.c  GUI.h  Game.c  Game.h  Graphics.c  Graphics.h  GraphicsUtilities.c  GraphicsUtilities.h  Image.c  Image.h  ImportAssets.c  ImportAssets.h  ImportGLTF.c  ImportGLTF.h  Main.c  MainGame.c  MainGame.h  MainMenu.c  MainMenu.h  Maths.c  Maths.cpp  Maths.h  Maths.hpp  MathsCPP.cpp  MathsCPP.hpp  Physics.c  Physics.h  PostBuild.bat  (+73 more)
Against/Assets/: LargeAsteroid.gltf  PlayerShip.gltf  RiggedFigure.gltf  SmallAsteroid.gltf  dummy_cube.gltf  pbr_opaque.frag  pbr_opaque.frag.spv  pbr_opaque.vert  pbr_opaque.vert.spv  sander.glb  sander.gltf  scharnhorst.gltf  simple_skin.gltf  skybox.gltf  sporty_granny.gltf  sporty_granny_hip_hop_dancing.gltf  sporty_granny_idle.gltf  sporty_granny_jump.gltf  sporty_granny_samba_dancing.gltf  wall_sander.gltf
Against/Maps/SplashScreen/: frag.frag  vert.spv
Against/Shaders/: compile.bat  frag.frag  frag.spv  vert.spv  vert.vert
Against/Shaders/MainMenu/: UI.frag  UI.frag.spv  UI.vert  UI.vert.spv  compile.bat
Against/Shaders/SplashScreen/: compile.bat  vert.vert
Against/UIElements/MainMenu/: MainMenu.gltf
Against/UIElements/SplashScreen/: SplashScreen.gltf
Deprecated/: Maths.c  main_menu.c  main_menu.h  splash_screen.c  splash_screen.h  splash_screen_graphics.c  splash_screen_graphics.h
